--- a/sims.html
+++ b/sims.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <div id="message-box">Use your mouse to orbit, zoom, and pan.<br>Use Arrow Keys to move the Sim.</div>
+    <div id="message-box">Use mouse to orbit/zoom/pan.<br>Use Arrow Keys to move Sim.<br>Sim wanders when idle.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
@@ -37,7 +37,7 @@
         const clock = new THREE.Clock(); // Clock for frame-rate independent movement
 
         // === Game Elements ===
-        let ground, houseWalls = [], /* houseRoof, */ simPlaceholder; // Removed houseRoof variable declaration
+        let ground, houseWalls = [], simPlaceholder;
         let furniture = []; // Array to hold furniture items
 
         // === Movement State ===
@@ -45,7 +45,13 @@
         let moveBackward = false;
         let moveLeft = false;
         let moveRight = false;
-        const moveSpeed = 3.0; // Units per second
+        const userMoveSpeed = 3.0; // Speed when user controls
+        const simWanderSpeed = 1.0; // Speed when Sim wanders
+
+        // === Sim Autonomy State ===
+        let isUserControlling = false; // Flag to track if user is actively moving the Sim
+        let wanderTarget = new THREE.Vector3(); // Target position for wandering
+        let timeToNewTarget = 0; // Timer to decide when to pick a new wander target
 
         // === Constants ===
         const wallHeight = 5;
@@ -54,6 +60,11 @@
         const houseDepth = 8;
         const simHeight = 2;
         const simRadius = 0.4;
+        // Define house boundaries for wandering
+        const houseMinX = -houseWidth / 2 + wallThickness / 2 + simRadius;
+        const houseMaxX = houseWidth / 2 - wallThickness / 2 - simRadius;
+        const houseMinZ = -houseDepth / 2 + wallThickness / 2 + simRadius;
+        const houseMaxZ = houseDepth / 2 - wallThickness / 2 - simRadius;
 
 
         // === Initialization Function ===
@@ -61,7 +72,7 @@
             // --- Scene Setup ---
             scene = new THREE.Scene();
             scene.background = new THREE.Color(0x87ceeb); // Sky blue background
-            scene.fog = new THREE.Fog(0x87ceeb, 15, 100); // Adjusted fog slightly
+            scene.fog = new THREE.Fog(0x87ceeb, 15, 100);
 
             // --- Camera Setup ---
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -97,25 +108,26 @@
             controls.enableDamping = true;
             controls.dampingFactor = 0.05;
             controls.screenSpacePanning = false;
-            controls.maxPolarAngle = Math.PI / 2 - 0.05; // Keep this to prevent looking straight down too easily
+            controls.maxPolarAngle = Math.PI / 2 - 0.05;
             controls.minDistance = 5;
             controls.maxDistance = 80;
 
             // --- Create Game World Elements ---
             createGround();
-            createSimpleHouse(); // Now only creates walls
-            createFurniture(); // Create furniture items
+            createSimpleHouse();
+            createFurniture();
             createSimPlaceholder();
+            setNewWanderTarget(); // Set initial wander target
 
             // --- Event Listeners ---
             window.addEventListener('resize', onWindowResize, false);
-            document.addEventListener('keydown', onKeyDown, false); // Listen for key presses
-            document.addEventListener('keyup', onKeyUp, false);     // Listen for key releases
+            document.addEventListener('keydown', onKeyDown, false);
+            document.addEventListener('keyup', onKeyUp, false);
 
             // --- Show Initial Message ---
             const messageBox = document.getElementById('message-box');
             messageBox.style.display = 'block';
-            setTimeout(() => { messageBox.style.display = 'none'; }, 7000); // Show for 7 seconds
+            setTimeout(() => { messageBox.style.display = 'none'; }, 8000); // Show for 8 seconds
 
             // --- Start Animation Loop ---
              animate(); // Start the rendering loop
@@ -125,7 +137,7 @@
         function createGround() {
             const groundGeometry = new THREE.PlaneGeometry(100, 100);
             const groundMaterial = new THREE.MeshStandardMaterial({
-                color: 0x228b22, // Forest green
+                color: 0x228b22,
                 roughness: 0.9,
                 metalness: 0.1
             });
@@ -138,19 +150,16 @@
         // === Create Simple House (Walls Only) ===
         function createSimpleHouse() {
             const wallMaterial = new THREE.MeshStandardMaterial({
-                color: 0xffdab9, // Peach puff
+                color: 0xffdab9,
                 roughness: 0.8,
                 metalness: 0.2
             });
-
-            // Wall dimensions and positions
             const wallData = [
-                { size: [houseWidth, wallHeight, wallThickness], position: [0, wallHeight / 2, -houseDepth / 2] }, // Back
-                { size: [houseWidth, wallHeight, wallThickness], position: [0, wallHeight / 2, houseDepth / 2] },  // Front
-                { size: [wallThickness, wallHeight, houseDepth], position: [-houseWidth / 2, wallHeight / 2, 0] }, // Left
-                { size: [wallThickness, wallHeight, houseDepth], position: [houseWidth / 2, wallHeight / 2, 0] }   // Right
+                { size: [houseWidth, wallHeight, wallThickness], position: [0, wallHeight / 2, -houseDepth / 2] },
+                { size: [houseWidth, wallHeight, wallThickness], position: [0, wallHeight / 2, houseDepth / 2] },
+                { size: [wallThickness, wallHeight, houseDepth], position: [-houseWidth / 2, wallHeight / 2, 0] },
+                { size: [wallThickness, wallHeight, houseDepth], position: [houseWidth / 2, wallHeight / 2, 0] }
             ];
-
             wallData.forEach(data => {
                 const wallGeometry = new THREE.BoxGeometry(...data.size);
                 const wall = new THREE.Mesh(wallGeometry, wallMaterial);
@@ -160,41 +169,19 @@
                 scene.add(wall);
                 houseWalls.push(wall);
             });
-
-            // --- Roof Removed ---
-            /*
-            const roofOverhang = 0.5;
-            const roofWidth = houseWidth + wallThickness + roofOverhang * 2;
-            const roofDepth = houseDepth + wallThickness + roofOverhang * 2;
-            const roofThickness = 0.3;
-            const roofGeometry = new THREE.BoxGeometry(roofWidth, roofThickness, roofDepth);
-            const roofMaterial = new THREE.MeshStandardMaterial({
-                color: 0x8B4513, // Saddle brown
-                roughness: 0.7,
-                metalness: 0.1
-            });
-            houseRoof = new THREE.Mesh(roofGeometry, roofMaterial);
-            houseRoof.position.set(0, wallHeight + roofThickness / 2, 0);
-            houseRoof.castShadow = true;
-            houseRoof.receiveShadow = true;
-            scene.add(houseRoof);
-            */
         }
 
         // === Create Basic Furniture Placeholders ===
         function createFurniture() {
             const furnitureMaterial = new THREE.MeshStandardMaterial({
-                 color: 0xA0522D, // Sienna color for furniture
+                 color: 0xA0522D,
                  roughness: 0.6,
                  metalness: 0.1
             });
-
-            // Define furniture pieces [width, height, depth], [x, y, z] position
             const furnitureData = [
-                { size: [2, 1, 3], position: [-houseWidth/4, 1/2, 0] }, // Bed-like shape
-                { size: [1.5, 0.8, 1.5], position: [houseWidth/4, 0.8/2, -houseDepth/4] }, // Table-like shape
+                { size: [2, 1, 3], position: [-houseWidth/4, 1/2, 0] },
+                { size: [1.5, 0.8, 1.5], position: [houseWidth/4, 0.8/2, -houseDepth/4] },
             ];
-
             furnitureData.forEach(data => {
                 const geometry = new THREE.BoxGeometry(...data.size);
                 const mesh = new THREE.Mesh(geometry, furnitureMaterial);
@@ -206,17 +193,15 @@
             });
         }
 
-
         // === Create Sim Placeholder ===
         function createSimPlaceholder() {
             const simGeometry = new THREE.CylinderGeometry(simRadius, simRadius, simHeight, 16);
             const simMaterial = new THREE.MeshStandardMaterial({
-                color: 0x0077cc, // Blue
+                color: 0x0077cc,
                 roughness: 0.5,
                 metalness: 0.3
              });
             simPlaceholder = new THREE.Mesh(simGeometry, simMaterial);
-            // Position slightly inside the house initially
             simPlaceholder.position.set(0, simHeight / 2, houseDepth / 4);
             simPlaceholder.castShadow = true;
             simPlaceholder.receiveShadow = false;
@@ -225,45 +210,28 @@
 
         // === Handle Key Down Events ===
         function onKeyDown(event) {
+            isUserControlling = true; // User takes control
             switch (event.code) {
-                case 'ArrowUp':
-                case 'KeyW': // Allow W for forward
-                    moveForward = true;
-                    break;
-                case 'ArrowLeft':
-                case 'KeyA': // Allow A for left
-                    moveLeft = true;
-                    break;
-                case 'ArrowDown':
-                case 'KeyS': // Allow S for backward
-                    moveBackward = true;
-                    break;
-                case 'ArrowRight':
-                case 'KeyD': // Allow D for right
-                    moveRight = true;
-                    break;
+                case 'ArrowUp': case 'KeyW': moveForward = true; break;
+                case 'ArrowLeft': case 'KeyA': moveLeft = true; break;
+                case 'ArrowDown': case 'KeyS': moveBackward = true; break;
+                case 'ArrowRight': case 'KeyD': moveRight = true; break;
             }
         }
 
         // === Handle Key Up Events ===
         function onKeyUp(event) {
             switch (event.code) {
-                case 'ArrowUp':
-                case 'KeyW':
-                    moveForward = false;
-                    break;
-                case 'ArrowLeft':
-                case 'KeyA':
-                    moveLeft = false;
-                    break;
-                case 'ArrowDown':
-                case 'KeyS':
-                    moveBackward = false;
-                    break;
-                case 'ArrowRight':
-                case 'KeyD':
-                    moveRight = false;
-                    break;
+                case 'ArrowUp': case 'KeyW': moveForward = false; break;
+                case 'ArrowLeft': case 'KeyA': moveLeft = false; break;
+                case 'ArrowDown': case 'KeyS': moveBackward = false; break;
+                case 'ArrowRight': case 'KeyD': moveRight = false; break;
+            }
+            // Check if any movement key is still pressed
+            if (!moveForward && !moveBackward && !moveLeft && !moveRight) {
+                isUserControlling = false; // User released all keys, Sim can wander
+                // Optional: Set a new wander target immediately when user stops
+                // setNewWanderTarget();
             }
         }
 
@@ -274,41 +242,76 @@
             renderer.setSize(window.innerWidth, window.innerHeight);
         }
 
+        // === Set a New Random Wander Target within House Bounds ===
+        function setNewWanderTarget() {
+            // Pick a random X and Z within the house walls
+            wanderTarget.x = THREE.MathUtils.randFloat(houseMinX, houseMaxX);
+            wanderTarget.z = THREE.MathUtils.randFloat(houseMinZ, houseMaxZ);
+            wanderTarget.y = simHeight / 2; // Keep Y fixed at ground level
+
+            // Set a random time until the next target is chosen (e.g., 3-8 seconds)
+            timeToNewTarget = THREE.MathUtils.randFloat(3, 8);
+
+            // Optional: Make the Sim "look" towards the target (simple rotation)
+            if (simPlaceholder) {
+                 // Calculate direction vector (ignoring Y)
+                const direction = new THREE.Vector3().subVectors(wanderTarget, simPlaceholder.position).normalize();
+                // Calculate angle and set rotation
+                 simPlaceholder.rotation.y = Math.atan2(direction.x, direction.z);
+            }
+        }
+
         // === Animation Loop ===
         function animate() {
             requestAnimationFrame(animate); // Request the next frame
 
-            const delta = clock.getDelta(); // Get time elapsed since last frame
+            const delta = clock.getDelta(); // Time elapsed since last frame
 
-            // --- Update Sim Position Based on Input ---
-            if (simPlaceholder) { // Check if sim exists
-                const currentSpeed = moveSpeed * delta; // Calculate distance moved this frame
+            // --- Update Sim Position ---
+            if (simPlaceholder) {
+                if (isUserControlling) {
+                    // --- User Controlled Movement ---
+                    const currentSpeed = userMoveSpeed * delta;
+                    if (moveForward) simPlaceholder.position.z -= currentSpeed;
+                    if (moveBackward) simPlaceholder.position.z += currentSpeed;
+                    if (moveLeft) simPlaceholder.position.x -= currentSpeed;
+                    if (moveRight) simPlaceholder.position.x += currentSpeed;
 
-                if (moveForward) {
-                    simPlaceholder.position.z -= currentSpeed;
+                     // Optional: Rotate Sim based on user movement direction (simple)
+                    let moveDir = new THREE.Vector3( (moveRight ? 1 : 0) - (moveLeft ? 1 : 0), 0, (moveBackward ? 1 : 0) - (moveForward ? 1 : 0));
+                    if (moveDir.lengthSq() > 0.1) { // Only rotate if moving significantly
+                         simPlaceholder.rotation.y = Math.atan2(moveDir.x, moveDir.z);
+                    }
+
+
+                } else {
+                    // --- Autonomous Wandering ---
+                    timeToNewTarget -= delta; // Decrease timer
+
+                    // If timer runs out or Sim is close to target, pick a new one
+                    if (timeToNewTarget <= 0 || simPlaceholder.position.distanceTo(wanderTarget) < 0.5) {
+                        setNewWanderTarget();
+                    }
+
+                    // Move towards the wander target
+                    const direction = new THREE.Vector3().subVectors(wanderTarget, simPlaceholder.position).normalize();
+                    const wanderDistance = simWanderSpeed * delta;
+                    simPlaceholder.position.addScaledVector(direction, wanderDistance);
+
+                     // Make sure Sim rotation matches wander direction (already set in setNewWanderTarget)
+                     // No need to update rotation every frame unless target changes or you want smoother turning
                 }
-                if (moveBackward) {
-                    simPlaceholder.position.z += currentSpeed;
-                }
-                if (moveLeft) {
-                    simPlaceholder.position.x -= currentSpeed;
-                }
-                if (moveRight) {
-                    simPlaceholder.position.x += currentSpeed;
-                }
-                // Basic boundary check (crude - doesn't account for sim radius)
-                const boundaryX = 49; // Slightly less than half ground width
-                const boundaryZ = 49; // Slightly less than half ground depth
-                simPlaceholder.position.x = Math.max(-boundaryX, Math.min(boundaryX, simPlaceholder.position.x));
-                simPlaceholder.position.z = Math.max(-boundaryZ, Math.min(boundaryZ, simPlaceholder.position.z));
+
+                // --- Boundary Clamping (Apply to both modes) ---
+                // Clamp position to stay within the defined house boundaries
+                simPlaceholder.position.x = Math.max(houseMinX, Math.min(houseMaxX, simPlaceholder.position.x));
+                simPlaceholder.position.z = Math.max(houseMinZ, Math.min(houseMaxZ, simPlaceholder.position.z));
 
                 // Ensure sim stays on the ground (Y position)
                 simPlaceholder.position.y = simHeight / 2;
             }
 
-
             controls.update(); // Update camera controls
-
             renderer.render(scene, camera); // Render the scene
         }
 
